fix npe and sort not getting passed through